# IMA-GALAXY

./: CMakeLists.txt  Doxyfile  README.md
Assets/: assets.json
Assets/Niveaux/: 1.pgm  2.pgm  Configurations.json
Assets/shaders/: 2Dtexture.fs.glsl  2Dtexture.vs.glsl  3Dtexture.fs.glsl  3Dtexture.vs.glsl  color.fs.glsl
DocHTML/: Adds_2third-party_2include_2glm_2common_8hpp.html  Adds_2third-party_2include_2glm_2common_8hpp__dep__incl.map  Adds_2third-party_2include_2glm_2common_8hpp__dep__incl.md5  Adds_2third-party_2include_2glm_2common_8hpp__incl.map  Adds_2third-party_2include_2glm_2common_8hpp__incl.md5  Adds_2third-party_2include_2glm_2common_8hpp_source.html  Adds_2third-party_2include_2glm_2glm_8hpp.html  Adds_2third-party_2include_2glm_2glm_8hpp__incl.map  Adds_2third-party_2include_2glm_2glm_8hpp__incl.md5  Adds_2third-party_2include_2glm_2glm_8hpp_source.html  AssetsManager_8hpp_source.html  BBox_8hpp_source.html  Camera_8hpp_source.html  Case_8hpp_source.html  Cone_8hpp_source.html  Cube_8hpp_source.html  Element_8hpp_source.html  FilePath_8hpp_source.html  Floor_8hpp_source.html  GameManager_8hpp.html  GameManager_8hpp__incl.map  GameManager_8hpp__incl.md5  GameManager_8hpp_source.html  Geometry_8hpp_source.html  IBO_8hpp_source.html  Image_8hpp_source.html  MenuMesh_8hpp_source.html  Menu_8hpp_source.html  Mesh_8hpp_source.html  Partie_8hpp_source.html  Personnage_8hpp_source.html  Plateau_8hpp_source.html  Program_8hpp_source.html  Render_8hpp_source.html  SDLWindowManager_8hpp_source.html  ShaderManager_8hpp_source.html  Shader_8hpp_source.html  Skybox_8hpp_source.html  Sphere_8hpp_source.html  Square_8hpp_source.html  (+1866 more)
DocHTML/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  (+101 more)
Elements/: CMakeLists.txt
Elements/include/Elements/: Cube.hpp  Element.hpp  Floor.hpp  Personnage.hpp  Skybox.hpp  Sol.hpp  Vertex.hpp
Elements/src/: Cube.cpp  Element.cpp  Personnage.cpp  Skybox.cpp  Sol.cpp
Game/: CMakeLists.txt  Chemin.txt
Game/Niveaux/: 1.pgm  Configurations.json
Game/include/: Case.hpp
Game/include/Game/: AssetsManager.hpp  Camera.hpp  Case.hpp  GameManager.hpp  Menu.hpp  Partie.hpp  Plateau.hpp
Game/src/: AssetsManager.cpp  Camera.cpp  Case.cpp  GameManager.cpp  Partie.cpp  Plateau.cpp
Jeu/: CMakeLists.txt  Temple_Run.cpp
Mesh/: CMakeLists.txt
Mesh/include/Mesh/: Cube.hpp  MenuMesh.hpp  Mesh.hpp  Square.hpp
Mesh/src/: Cube.cpp  MenuMesh.cpp  Mesh.cpp  Square.cpp
Render/: CMakeLists.txt
Render/include/Render/: IBO.hpp  Render.hpp  ShaderManager.hpp  Texture.hpp  VAO.hpp  VBO.hpp
Render/src/: IBO.cpp  Render.cpp  ShaderManager.cpp  Texture.cpp  VAO.cpp  VBO.cpp
TestOpenGL/: ex1_trackball.cpp
TestOpenGL/shaders/: 3D.vs.glsl  multiText3D.fs.glsl  text3D.fs.glsl
Test_Meshs/: Test_AssetsManager.cpp  Test_Camera.cpp  Test_Element.cpp  Test_Fullscreen.cpp  Test_GameManager.cpp  Test_Menu.cpp  Test_MenuV2.cpp  Test_Partie.cpp  Test_Perso.cpp  Test_Skybox.cpp  Test_SkyboxV2.cpp  Test_Square.cpp  Test_importPlateau.cpp  test_CameraV2.cpp  test_Plateau.cpp  test_Squares.cpp
Test_Meshs/shaders/: camera.vs.glsl
Test_OpenGL/: CMakeLists.txt  Makefile  SDLtemplate.cpp  Skybox.cpp  SkyboxTest.cpp  Temple_Run.cpp  Test_Camera.cpp  Test_Cube_Mesh.cpp  Test_Shaders.cpp  Test_Texture.cpp  Test_Triangle.cpp  Test_Triangle_Mesh.cpp  cmake_install.cmake  test_Plateau.cpp
Test_OpenGL/shaders/: 3D.vs.glsl  3Dtexture.vs.glsl  camera.fs.glsl  color.vs.glsl  normals.fs.glsl  texture.fs.glsl  texture.vs.glsl
glimac/: CMakeLists.txt
glimac/include/glimac/: TrackballCamera.hpp  common.hpp
man/man3/: md_README.3
